duniverse/alcotest/test/e2e/alcotest/passing/separator_testname.ml
let () =
  Alcotest.run __FILE__
    [
      ( "with/separator",
        [ Alcotest.test_case "First test case" `Quick (fun () -> ()) ] );
    ]
